<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_margin="16sp"
    android:backgroundTint="#f7f7f7"
    android:background="@drawable/curve_sharp"
    android:orientation="vertical"
    android:paddingHorizontal="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:text="@string/details"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:text="@string/file_name"
        android:textColor="#474747"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/detail_dialog_name"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:textColor="#9A9A9A"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:text="@string/path"
        android:textColor="#474747"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:id="@+id/detail_dialog_path"
        android:textColor="#9A9A9A"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:text="@string/last_modified"
        android:textColor="#474747"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:id="@+id/detail_dialog_lastmodified"
        android:textColor="#9A9A9A"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:text="@string/last_viewed"
        android:id="@+id/detail_dialog_lastviewed_title"
        android:textColor="#474747"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/detail_dialog_lastviewed"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:textColor="#9A9A9A"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:text="@string/size"
        android:textColor="#474747"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:id="@+id/detail_dialog_size"
        android:textColor="#9A9A9A"
        android:textSize="14sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ok_detail_dialog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="20sp"
        android:background="@drawable/curve_sharp"
        android:text="@string/ok"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_number_card" />

</androidx.appcompat.widget.LinearLayoutCompat>
