<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16sp"
    android:background="@drawable/curve_sharp"
    android:backgroundTint="#f7f7f7"
    android:paddingVertical="8dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/delete_file"
        android:textColor="#343839"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16sp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/roboto"
        android:text="@string/delete_dialog_text"
        android:textColor="#888989"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#16171B"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/deletebtn"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deletebtn"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/appcolor_red"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

</androidx.constraintlayout.widget.ConstraintLayout>
