<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16sp"
    android:paddingVertical="8dp"
    android:background="@drawable/curve_sharp"
    android:backgroundTint="#f7f7f7">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/roboto"
        android:text="@string/file_name"
        android:textSize="20sp"
        android:textColor="#343839"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/page_number_card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@android:color/transparent"
                android:drawableEnd="@drawable/edit_text_cut"
                android:ellipsize="end"
                android:hint="@string/enter_file_name"
                android:paddingEnd="8dp"
                android:paddingStart="0dp"
                android:singleLine="true"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelRename"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#16171B"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/okRename"
        app:layout_constraintTop_toBottomOf="@+id/page_number_card" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/okRename"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:text="@string/ok"
        android:textColor="@color/appcolor_red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_number_card" />

</androidx.constraintlayout.widget.ConstraintLayout>
